--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "description": "Testing javascript examples",
   "main": "index.html",
   "scripts": {
+    "flow": "flow",
     "lint": "eslint src/static-testing-tools",
     "prettier": "prettier \"**/*.+(js|json|yml|css|md)\"",
     "format": "yarn prettier --write",
-    "validate": "yarn lint && yarn prettier --list-different"
+    "validate": "yarn lint && yarn prettier --list-different && yarn flow"
   },
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
     "eslint": "^5.12.0",
     "eslint-config-prettier": "^3.3.0",
+    "flow-bin": "^0.90.0",
     "prettier": "^1.15.3"
   }
 }
