--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint src/static-testing-tools",
     "prettier": "prettier \"**/*.+(js|json|yml|css|md)\"",
     "format": "yarn prettier --write",
-    "validate": "yarn lint && yarn prettier --list-different && yarn flow"
+    "validate": "yarn lint && yarn prettier --list-different && yarn flow",
+    "precommit": "yarn validate"
   },
   "license": "MIT",
   "dependencies": {},
@@ -17,6 +18,7 @@
     "eslint": "^5.12.0",
     "eslint-config-prettier": "^3.3.0",
     "flow-bin": "^0.90.0",
+    "husky": "^1.3.1",
     "prettier": "^1.15.3"
   }
 }
