--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prettier": "prettier \"**/*.+(js|json|yml|css|md)\"",
     "format": "yarn prettier --write",
     "validate": "yarn lint && yarn prettier --list-different && yarn flow",
-    "precommit": "yarn validate"
+    "precommit": "lint-staged && yarn flow"
   },
   "license": "MIT",
   "dependencies": {},
@@ -19,6 +19,7 @@
     "eslint-config-prettier": "^3.3.0",
     "flow-bin": "^0.90.0",
     "husky": "^1.3.1",
+    "lint-staged": "^8.1.0",
     "prettier": "^1.15.3"
   }
 }
