Fix eslint issues

--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,9 @@
     "no-console": "off"
   },
   "env": {
-    "browser": true
+    "browser": true,
+    "node": true,
+    "jest": true,
+    "es6": true
   }
 }
