--- a/package.json
+++ b/package.json
@@ -5,20 +5,24 @@
   "main": "index.html",
   "scripts": {
     "flow": "flow",
-    "lint": "eslint src/static-testing-tools",
+    "lint": "eslint .",
     "prettier": "prettier \"**/*.+(js|json|yml|css|md)\"",
     "format": "yarn prettier --write",
     "validate": "yarn lint && yarn prettier --list-different && yarn flow",
-    "precommit": "lint-staged && yarn flow"
+    "precommit": "lint-staged && yarn flow",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
     "babel-eslint": "^10.0.1",
+    "create-jest-runner": "^0.4.1",
     "eslint": "^5.12.0",
     "eslint-config-prettier": "^3.3.0",
     "flow-bin": "^0.90.0",
     "husky": "^1.3.1",
+    "jest": "^23.6.0",
     "lint-staged": "^8.1.0",
     "prettier": "^1.15.3"
   }
